--- a/frr/frr.conf
+++ b/frr/frr.conf
@@ -9,8 +9,11 @@
 # vtysh to write configuration to a different file.
 log syslog informational
 !
-router ospf
- network 10.0.0.0/24 area 0.0.0.0
+router rip
+ network 192.168.0.0/24
+!
+!router ospf
+! network 192.168.0.0/24 area 0.0.0.0
 !
 redistribute connected
 !
