--- a/frr/frr.conf
+++ b/frr/frr.conf
@@ -11,9 +11,9 @@ log syslog informational
 !
 router rip
  network 192.168.0.0/24
+ redistribute connected
 !
-!router ospf
-! network 192.168.0.0/24 area 0.0.0.0
-!
-redistribute connected
+router ospf
+ network 192.168.0.0/24 area 0.0.0.0
+ redistribute connected
 !
